# britishize

./: .gitignore  api-explorer.ipynb  britishize.py  pyproject.toml  readme.md
src/britishize/: __main__.py  britishize.py
