[tool.poetry]
name = "britishize"
version = "0.1.0"
description = "Write better english"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
