[tool.poetry]
name = "britishize"
version = "0.2.0"
description = "Write better english"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
britishize = "britishize.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
